syntax = "proto3";

option go_package = "github.com/beam-cloud/beta9/proto";

package endpoint;

service EndpointService {
  rpc StartEndpointServe(StartEndpointServeRequest)
      returns (StartEndpointServeResponse) {}
  rpc StopEndpointServe(StopEndpointServeRequest)
      returns (StopEndpointServeResponse) {}
  rpc EndpointServeKeepAlive(EndpointServeKeepAliveRequest)
      returns (EndpointServeKeepAliveResponse) {}
}

message StartEndpointServeRequest {
  string stub_id = 1;
  int32 timeout = 2;
}

message StartEndpointServeResponse {
  bool ok = 1;
  string container_id = 2;
  string error_msg = 3;
}

message StopEndpointServeRequest { string stub_id = 1; }
message StopEndpointServeResponse { bool ok = 1; }

message EndpointServeKeepAliveRequest {
  string stub_id = 1;
  int32 timeout = 2;
}
message EndpointServeKeepAliveResponse { bool ok = 1; }